@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

class Artikel {
    + Titel: varchar(200)
    + ArtikelID: int(11)
}

class Kommentare {
    + KommentarID: int(11)
    + KommentierendeID: int(11)
    + Betreff: varchar(200)
    + Kommentar: text
    + Datum: date
}

class Kommentare_Artikel {
    +mentarID: int(11)
    + ArtikelID: int(11)
}

class Kommentierende {
    + KommentierendeID: int(11)
    + Name: varchar(120)
    + Email: varchar(120)
    + Homepage: varchar(120)
}

Kommentierende ||--o{ Kommentare : "KommentierendeID"
Artikel ||--o{ Kommentare_Artikel : "ArtikelID"
Kommentare ||--o{ Kommentare_Artikel : "KommentarID"

@enduml